# cirbo-search

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: csat_tests.yml
app/: CMakeLists.txt  cirbo_search_cli.cpp
benchmarks/: dummy_circuit.bench
src/: logger.hpp
src/core/: algo.hpp  logic.hpp  operators.hpp  types.hpp
src/core/structures/: dag.hpp  gate_info.hpp  iassignment.hpp  icircuit.hpp  icircuit_builder.hpp  mutable_circuit.hpp  vector_assignment.hpp
src/io/parsers/: bench_to_circuit.hpp  ibench_parser.hpp  iparser.hpp
src/io/writers/: write_utils.hpp
src/minimization/: composition.hpp  nest.hpp  strategy.hpp  transformer_base.hpp
src/minimization/low_effort/: connect_symmetrical_gates.hpp  constant_gate_reducer.hpp  de_morgan.hpp  disconnect_symmetrical_gates.hpp  duplicate_gates_cleaner.hpp  duplicate_operands_cleaner.hpp  merge_not_with_others.hpp  reduce_not_composition.hpp  redundant_gates_cleaner.hpp  split_not_from_others.hpp
src/utils/: cast.hpp  encoder.hpp  optimize.hpp  random.hpp  string_utils.hpp
tests/: CMakeLists.txt  build_sanity_check.cpp
tests/src/core/: algo_test.cpp  n_operators_test.cpp  nt_operators_test.cpp  operators_test.cpp  top_sort_test.cpp
tests/src/core/structures/: dag_test.cpp  vector_assignment_test.cpp
tests/src/io/parsers/: bench_parser_test.cpp
tests/src/minimization/low_effort/: connect_symmetrical_gates.cpp  constant_gate_reducer.cpp  de_morgan.cpp  disconnect_symmetrical_gates.cpp  duplicate_gates_cleaner.cpp  duplicate_operands_cleaner.cpp  merge_not_with_others.cpp  reduce_not_composition.cpp  redundant_gates_cleaner.cpp  split_not_from_others.cpp
tests/src/utils/: encoder_test.cpp  string_utils.cpp
